加入缓冲